---
config:
  layout: elk
  theme: neutral
---
%%{ init: { 'themeVariables': { 'fontSize': '14px', 'fontFamily': 'Arial' } } }%%
classDiagram
    class Status {
        <<enumeration>>
        ANDAMENTO
        ATRASADO
        CONCLUIDO_PRAZO
        CONCLUIDO_ATRASO
    }
    class Urgencia{
        <<enumeration>>
        CRITICO
        ALTO
        MODERADO
        BAIXO
    }
    class Visibilidade{
        <<enumeration>>
        PUBLICO
        APENAS_EQUIPE
        APENAS_GERENTE
        PRIVADO
    }
    class Usuario {
        <<abstract>>
        - nome: string
        - empresa: string
        - email: string
        - cargo: string
        + comentar()
    }
    class Gerente {
        + listarEquipe()
        + listarProjetos()
        + listarTarefas()
    }
    class Colaborador {
        + concluirTarefa()
    }
    class Tarefa {
        - titulo: string
        - descricao: string
        - status: Status
        - urgencia: Urgencia
        - visibilidade: Visibilidade
        - dataCriacao: Date
        - dataPrazo: Date
    }
    class Projeto {
        - nome: string
        - descricao: string
        - dataCriacao: Date
        + listarTarefas()
        + listarMembros()
    }
    class Equipe {
        - descricao: string
        + adicionaMembro(Usuario)
        + removeMembro(Usuario)
        + listarMembros()
    }
    class ConviteEquipe {
        - dataConvite: Date
        - dataVencimento: Date
        - mensagem: string
    }
    class Comentario {
        - mensagem: string
        - dataEnvio : Date
    }
    class Anexo {
        - pathArquivo: string
    }
    class Checklist {
        - titulo: string
    }
    class ItemChecklist {
        - descricao: string
        - concluido: bool
    }
    class Dashboard {
        + visualizarResumo()
    }
    class Lembrete {
        - mensagem: string
        - data: Date
    }
    Usuario <|-- Gerente
    Usuario <|-- Colaborador
    Usuario "1" *-- "1" Dashboard
    Colaborador "*" -- "*" Tarefa
    Tarefa "1" -- "*" Anexo
    Tarefa "1" -- "1" Checklist
    Checklist "1" *-- "*" ItemChecklist
    Projeto "1" -- "*" Tarefa
    Projeto "1" -- "*" Anexo
    Equipe "*" o-- "*" Usuario
    Comentario "1" -- "*" Comentario
    Comentario "*" .. "1" Tarefa
    Projeto "*" ..> "*" Equipe
    Equipe "*" ..> "1" Gerente
    Comentario "*" ..> "1" Usuario
    ConviteEquipe "1" ..> "1" Usuario
    ConviteEquipe "1" ..> "1" Equipe
    Lembrete "1" ..> "1" Tarefa
    Lembrete "1" ..> "1" Usuario